samples/_failures_safe/1761076542_93196f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_781e0c76.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_781e0c76.c:171:14: error: ‘TO’ undeclared (first use in this function)
  171 |         case TO
      |              ^~
./samples/SAFE/__tmp_781e0c76.c:171:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_781e0c76.c:171:9: error: expected ‘:’ or ‘...’ at end of input
  171 |         case TO
      |         ^~~~
./samples/SAFE/__tmp_781e0c76.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_781e0c76.c:171:9: error: expected declaration or statement at end of input
